# stm32f1-picopwner

./: .gitignore  CMakeLists.txt  README.md  attack.c  dump.py
attack/: CMakeLists.txt  attack.c
f4-testing/: Makefile  blinky.S
src/: CMakeLists.txt  attack.c
targetfw/: Makefile  main.c  test.S
